--- a/study5/pom.xml
+++ b/study5/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.pro04</groupId>
-  <artifactId>pro04</artifactId>
+  <groupId>org.study2</groupId>
+  <artifactId>study2</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>pro04 Maven Webapp</name>
+  <name>study2 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
     <java-version>17</java-version>
@@ -332,7 +332,7 @@
 
   </dependencies>
   <build>
-    <finalName>pro04</finalName>
+    <finalName>study2</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-eclipse-plugin</artifactId>
