--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
       </exclusions>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
 
     <!-- 의존성 주입 라이브러리 -->
     <dependency>
@@ -267,7 +278,12 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
-
+    <!-- cos.jar 파일 업로드 -->
+    <dependency>
+      <groupId>servlets.com</groupId>
+      <artifactId>cos</artifactId>
+      <version>05Nov2002</version>
+    </dependency>
     <!--  이미지 편집 라이브러리 imgscalr-lib 4.0 -->
     <dependency>
       <groupId>org.imgscalr</groupId>
@@ -334,7 +350,12 @@
       <artifactId>icu4j</artifactId>
       <version>4.0.1</version>
     </dependency>
-
+    <!-- 채팅 웹소켓 추가-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-websocket</artifactId>
+      <version>5.3.20</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>study2</finalName>
